crud da tabela personagem criada

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="mysql://root:bcd127@localhost:3306/db_locadora_filme_ds2m_25_2"
+# Mudar a senha do root no caminho da URL
